# tgaamod

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
dll/: CMakeLists.txt  dll.cpp  hook.cpp  hook.h  module.h  overlay.cpp  overlay.h  tgaamod.cpp  tgaamod.h
dll/modules/: fps.cpp  scriptinspector.cpp
dll/mt/: mtcolor.h  mtdti.cpp  mtdti.h  mtobject.cpp  mtobject.h  mtproperty.cpp  mtproperty.h
dll/widgets/: proplist.cpp  proplist.hpp
loader/: CMakeLists.txt  main.cpp
